helloworld-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-app-deployment
  labels:
    app: helloworld-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-app
  template:
    metadata:
      labels:
        app: helloworld-app
    spec:
      containers:
        - name: helloworld
          image: vladyslavstepanenko1/helloworld-app
          ports:
            - containerPort: 3000
