helloworld-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-app-service
  labels:
    app: helloworld-app
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 3000
  selector:
    app: helloworld-app
